--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_executable(main main.cpp)
 
-add_definitions(-DUSE_MKL)
-
 find_package(Matrix 0.3.0 REQUIRED)
 find_package(Stats)
 target_link_libraries(main Statslabs::Matrix Statslabs::Stats)
+
+add_subdirectory(data)
